<?xml version="1.0" encoding="utf-8"?>
<!-- v8.2(O-0157) 앱 아이콘 길게 누르기 바로가기(최대 4개). 각 항목은 MainActivity 를 열고 k_shortcut 값으로 화면·동작을 고른다
     (app.js 의 'launch' 처리: voice=케이 채팅+음성 대화 시작, record=녹음 바로 시작, photo=채팅+사진 고르기, today=홈 「오늘 한눈에」). -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="voice" android:enabled="true" android:icon="@drawable/ic_sc_voice"
        android:shortcutShortLabel="@string/sc_voice_short" android:shortcutLongLabel="@string/sc_voice_long">
        <intent android:action="com.kwak.voicememo.action.SHORTCUT"
            android:targetPackage="com.kwak.voicememo" android:targetClass="com.kwak.voicememo.MainActivity">
            <extra android:name="k_shortcut" android:value="voice" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="record" android:enabled="true" android:icon="@drawable/ic_sc_rec"
        android:shortcutShortLabel="@string/sc_record_short" android:shortcutLongLabel="@string/sc_record_long">
        <intent android:action="com.kwak.voicememo.action.SHORTCUT"
            android:targetPackage="com.kwak.voicememo" android:targetClass="com.kwak.voicememo.MainActivity">
            <extra android:name="k_shortcut" android:value="record" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="photo" android:enabled="true" android:icon="@drawable/ic_sc_photo"
        android:shortcutShortLabel="@string/sc_photo_short" android:shortcutLongLabel="@string/sc_photo_long">
        <intent android:action="com.kwak.voicememo.action.SHORTCUT"
            android:targetPackage="com.kwak.voicememo" android:targetClass="com.kwak.voicememo.MainActivity">
            <extra android:name="k_shortcut" android:value="photo" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="today" android:enabled="true" android:icon="@drawable/ic_sc_today"
        android:shortcutShortLabel="@string/sc_today_short" android:shortcutLongLabel="@string/sc_today_long">
        <intent android:action="com.kwak.voicememo.action.SHORTCUT"
            android:targetPackage="com.kwak.voicememo" android:targetClass="com.kwak.voicememo.MainActivity">
            <extra android:name="k_shortcut" android:value="today" />
        </intent>
    </shortcut>
</shortcuts>
